--- a/templates/timer.html
+++ b/templates/timer.html
@@ -355,12 +355,12 @@
         </div>
 
         <br>
-        <img class="center-block" id="startbutton" src="{{url_for('static', filename='startbutton.png')}}" style="height:150px; width=150px;" />
+        <img class="center-block" id="startbutton" src="{{url_for('static', filename='startbutton.png')}}" style="height:13vh; width=13vw;" />
         <br>
         <br>
         <br>
         <div class="row">
-        <button class="center-block" id="invite" value="Invite" class="bottom-button"  onclick="copyToClipboard(window.location.href);"> Invite</button>
+        <button class="center-block text-center" id="invite" value="Invite" class="bottom-button"  onclick="copyToClipboard(window.location.href);"> Invite</button>
       </div>
     </div>
     <div class="row">
@@ -437,7 +437,7 @@
       color:white;
       height:6vh;
 
-      font-size: 40px;
+      font-size: 2.5em;
       width:14vh;
     }
     #snackbar {
@@ -548,7 +548,7 @@ However, delay the fade out process for 2.5 seconds */
     #time {
         /* 00:00: */
         font-family: "Avenir";
-        font-size: 180px;
+        font-size: 11em;
         color: #FFFFFF;
         letter-spacing: -3.5px;
         line-height: 318px;
