update the font

--- a/templates/timer.html
+++ b/templates/timer.html
@@ -429,6 +429,11 @@
 </script>
 
 <style>
+  @font-face {
+    font-family: "Avenir";
+    src: url("../static/Avenir.ttg");
+  }
+
     #invite{
       /* Rectangle 13: */
       background: #50F9D3;
