--- a/templates/timer.html
+++ b/templates/timer.html
@@ -431,7 +431,7 @@
 <style>
   @font-face {
     font-family: "Avenir";
-    src: url("../static/Avenir.ttg");
+    src: "../static/Avenir.ttg";
   }
 
     #invite{
