change the font again

--- a/templates/timer.html
+++ b/templates/timer.html
@@ -431,7 +431,7 @@
 <style>
   @font-face {
     font-family: "Avenir";
-    src: "../static/Avenir.ttg";
+    src: {{ url_for('static', filename='Avenir.ttc') }};
   }
 
     #invite{
