--- a/templates/timer.html
+++ b/templates/timer.html
@@ -431,7 +431,7 @@
 <style>
   @font-face {
     font-family: "Avenir";
-    src: {{ url_for('static', filename='Avenir.ttc') }};
+    src: { url_for('static', filename='Avenir.ttc') };
   }
 
     #invite{
