hopefully fix the timer

--- a/templates/timer.html
+++ b/templates/timer.html
@@ -167,7 +167,7 @@
                 console.log("start time pause" + pause);
                 clearInterval(x);
                 numbersession = msg.session;
-                distance = msg.currenttime;
+                distance = msg.currenttime-100;
                 online = msg.online;
                 document.getElementById("onlinenumber").innerHTML = msg.online;
 
