--- a/templates/timer.html
+++ b/templates/timer.html
@@ -430,7 +430,7 @@
 <style>
   @font-face {
     font-family: "Avenir";
-    src: url("Avenir.ttc");
+    src: {{ url_for('static', filename='Avenir.ttc') }};
   }
 
     #invite{
