--- a/templates/timer.html
+++ b/templates/timer.html
@@ -369,7 +369,7 @@
             <div class="row">
                 Online
             </div>
-            <div class="row" style="padding-top:30px;" id="onlinenumber">
+            <div class="row" style="padding-top:4vh;" id="onlinenumber">
                 1
             </div>
 
@@ -378,7 +378,7 @@
             <div class="row" id="takeabreak">
                 <input type="submit" value="Skip" class="bottom-button" id="takebreak"> </input>
             </div>
-            <div class="row" style="padding-top:40px;">
+            <div class="row" style="padding-top:4vh;">
                 <input type="submit" value="Reset" class="bottom-button" id="reset"> </input>
             </div>
 
@@ -387,7 +387,7 @@
             <div class="row">
                 Session
             </div>
-            <div class="row" id="sessionnumber" style="padding-top:40px;">
+            <div class="row" id="sessionnumber" style="padding-top:4vh;">
                 0
             </div>
 
@@ -443,7 +443,7 @@
       color:white;
       height:6vh;
 
-      font-size: 2em;
+      font-size: 3vh;
       width:14vh;
     }
     #snackbar {
@@ -545,7 +545,7 @@ However, delay the fade out process for 2.5 seconds */
         /* online: */
         border-right: 1px solid #979797;
         font-family: "Avenir";
-        font-size: 3.75em;
+        font-size: 5vh;
         padding-top: 5vh;
         color: rgba(88, 199, 181, 0.73);
         letter-spacing: -0.41px;
@@ -554,7 +554,7 @@ However, delay the fade out process for 2.5 seconds */
     #time {
         /* 00:00: */
         font-family: "Avenir";
-        font-size: 16em;
+        font-size: 16vh;
         color: #FFFFFF;
         letter-spacing: -3.5px;
         line-height: 318px;
